--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,12 @@ html {
     background-position: cover;
     background-repeat: no-repeat;
     position: absolute;
-    color: white;
 }
-
+#title {
+    font-size: 50px;
+    margin-bottom: 15px;
+    color: black;
+}
 
 h1,
 h2 {
@@ -29,15 +32,16 @@ body {
 .panel {
     /*width: 22%;*/
     display: inline-block;
-    margin: 10px;
     text-align: center;
 }
 
 .panel img {
-    max-height: 190px;
+    max-height: 100%;
+    height: 140px;
     width: auto;
     
 }
+
 #attack {
     position: absolute;
     top: 50%;
@@ -52,7 +56,6 @@ body {
 }
 #fightSection {
     background: white;
-    
 }
 #status {
     color: black;
