--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,8 +50,11 @@ body {
 #attack {
     position: absolute;
     top: 50%;
-    left: 90%;
+    left: 50%;
     transform: translate(-50%, -50%);
+}
+.character {
+    padding: 10px;
 }
 
 #restart {
