--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 html {
     width: 100%;
-    height: 100%;
+    height: 180%;
     background-image: url('../images/logo.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
+    
 }
 
 #title {
@@ -43,16 +44,17 @@ body {
     width: auto;
 
 }
+
 .listGroup {
     font-family: 'Amatic SC', cursive;
 }
 
 #attack {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    align-content: center;
+    margin-bottom: 25px;
+   
 }
+
 .character {
     padding: 10px;
 }
@@ -64,12 +66,12 @@ body {
     transform: translate(-50%, -50%);
 }
 
-#fightSection {
-    background: white;
+.fightSection {
+    background: none;
+    align-content: center;
 }
 
 #status {
-    color: black;
-    font-size: 20px;
+    color: white;
+    font-size: 16px;
 }
-
