--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ body {
     background-color: black;
     position: absolute;
     text-align: center;
+    align-content: center;
     width: 100%;
     height: 100%;
 
@@ -49,7 +50,7 @@ body {
     font-family: 'Amatic SC', cursive;
 }
 
-#attack {
+.attack {
     align-content: center;
     margin-bottom: 25px;
    
@@ -71,7 +72,7 @@ body {
     align-content: center;
 }
 
-#status {
+.status {
     color: white;
     font-size: 16px;
 }
