--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,11 +50,11 @@ body {
     font-family: 'Amatic SC', cursive;
 }
 
-.attack {
+/* .attack {
     align-content: center;
     margin-bottom: 25px;
    
-}
+} */
 
 .character {
     padding: 10px;
