--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 html {
     width: 100%;
-    height: 180%;
+    height: 250%;
     background-image: url('../images/logo.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -60,12 +60,12 @@ body {
     padding: 10px;
 }
 
-/* #restart {
+#restart {
     position: absolute;
     top: 50%;
     left: 90%;
     transform: translate(-50%, -50%);
-} */
+}
 
 .fightSection {
     background: none;
