--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,19 @@
+/* Cant figure out how to stretch picture */
 .container-fluid {
     width: 100%;
     height: auto;
     background-image: url('../images/logo.jpg');
-    background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
+    background-size: cover;
 }
-
+/* Title */
 #title {
     font-size: 50px;
     margin-bottom: 15px;
     color: white;
 }
-
+/* Fonts of headings */
 h1,
 h2 {
     font-family: 'Alfa Slab One', cursive;
@@ -20,7 +21,7 @@ h2 {
     text-align: center;
     padding-bottom: 10px;
 }
-
+/* center conter */
  body {
     text-align: center;
     align-content: center;
