--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,29 @@
+/* Zero out margins and padding */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+/* Set background image to cover full site */
 .container-fluid {
     width: 100%;
-    height: auto;
-    max-height: 250%;
     background-image: url('../images/logo.jpg');
     background-repeat: no-repeat;
     position: absolute;
     background-size: cover;
+    margin-bottom: 0;
+    min-height: 100%;
 }
 
+/* Title styling */
 #title {
     font-size: 50px;
     margin-bottom: 15px;
     color: white;
 }
 
+/* Heading styling */
 h1,
 h2 {
     font-family: 'Alfa Slab One', cursive;
@@ -22,18 +32,22 @@ h2 {
     padding-bottom: 10px;
 }
 
- body {
+/* Body styling */
+body {
     text-align: center;
     align-content: center;
+    margin: 0;
 
-} 
+}
 
+/* Panel display layout */
 .panel {
     /*width: 22%;*/
     display: inline-block;
     text-align: center;
 }
 
+/* Panel image styling */
 .panel img {
     max-height: 100%;
     height: 140px;
@@ -41,33 +55,24 @@ h2 {
 
 }
 
+/* Font styling */
 .listGroup {
     font-family: 'Amatic SC', cursive;
 }
 
-/* .attack {
-    align-content: center;
-    margin-bottom: 25px;
-   
-} */
-
+/* Padding next to character */
 .character {
     padding: 10px;
 }
 
-/* #restart {
-    position: absolute;
-    top: 50%;
-    left: 90%;
-    transform: translate(-50%, -50%);
-} */
-
+/* Take off background for fight section, center characters */
 .fightSection {
     background: none;
     align-content: center;
-    
+
 }
 
+/* Styling for status text */
 .status {
     color: white;
     font-size: 16px;
